# las-lucj

./: CrCr_LS_ci.npy  CrCr_LS_mc_ci.npy  LUCJ_loader.py  LUCJ_sampler.py  README.md  comb.py  get_hamiltonian.py  get_init_state.py  hs_66.out  initial_state.py  las_lucj.py  las_nuvqe.py  las_vqe.py  load_las_lucj.py  nrep1.out  nrep2.out  nrep2_nobasis.out  nrep2_stat.out  nrep3.out  nrep4.out  nrep5.out  nrep6.out  operators.py  pyproject.toml  run.slurm  sqd.err  test.py  test1.out  test2.out
alfefe/HS_11_10/: LUCJ_sampler.py  las_lucj.py  noisy_run_1rep.out  run.slurm  sqd.err
alfefe/LS_11_10/: LUCJ_loader.py  LUCJ_sampler.py  converged_10_11.npy  las_1011_ud.npy  las_lucj.py  ls_orbs_10_11.npy  noisy_run_1rep.out  sqd.err
cr_6_10/: .las_lucj.py.swp  CrCr_LS_mo.npy  LUCJ_sampler.py  as_increase_crcr_avas.molden  as_increase_crcr_avas_3d.molden  as_increase_crcr_las.molden  as_increase_crcr_las_hs.molden  as_increase_crcr_locmocoeff.molden  as_increase_crcr_sortmo.molden  crcr_sing_svp_dm.npy  hs.out  input.py  kd_6_10_lasmo_hs.npy  las_lucj.py  load_200k_shots.out  load_las_lucj.py  run.slurm  sqd.err  test.qpy
cr_6_10/clean_up_sqd/: sqd.err  (+6 more)
cr_6_6_hardware/: 2026-01-19T16:38:09.333243_info.txt  2026-01-20T14:10:05.894791_info.txt  2026-01-20T14:10:05.894791_logfile.txt  hardware_run_2rep.out  hardware_simulator.py  job_id.txt  kd_6_10_lasmo.npy  las_lucj.py  run.slurm  sqd.err
fragment_load/: CrCr_LS_mc_ci.npy  LUCJ_loader.py  las_lucj.py  load_full.out  load_full_run.out  nrep1.out  run.slurm  sqd.err
notebooks/: ucj-merge.ipynb
tests/: ucj_frag_test.py
(+39 files in other folders)
