[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "las-lucj"
version = "0.0.0"
description = "LAS-LUCJ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffsim>=0.0.64",
    "qiskit[visualization]>=2.3.0",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "ruff>=0.14.13"]
